kubernetes/route/simple/destination-rule-transportadora-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: transportadora
  namespace: raptorslog
spec:
  host: transportadora
  subsets:
    - labels:
        version: v1
      name: version-v1
    - labels:
        version: v2
      name: version-v2
