kubernetes/route/simple/virtual-service-transportadora-v1-v2-90-10.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transportadora
  namespace: raptorslog
spec:
  hosts:
  - transportadora
  http:
  - route:
      - destination:
          host: transportadora
          subset: version-v1
        weight: 90
      - destination:
          host: transportadora
          subset: version-v2
        weight: 10
