kubernetes/route/simple/virtual-service-transportadora-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transportadora
spec:
  hosts:
    - transportadora
  http:
    - route:
        - destination:
            host: transportadora
            subset: version-v2
          weight: 100
